--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./blackjack.css">
+    <link rel="stylesheet" href="./style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -19,6 +19,6 @@
     <p id="score"></p>
     <p>$10 for Every Round</p>    
     <p>+ $30 to your balance , if you win</p>
-    <script src="./blackjack.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
